default/objects/FormatDetails__mdt/FormatDetails__mdt.object-meta.xml
<CustomObject>
    <label>FormatDetails</label>
    <pluralLabel>Format Details</pluralLabel>
</CustomObject>