default/objects/FormatDetails__mdt/fields/TableBorder__c.field-meta.xml
<CustomField>
    <fullName>TableBorder__c</fullName>
    <label>TableBorder</label>
    <length>25</length>
    <type>Text</type>
</CustomField>