default/objects/FormatDetails__mdt/fields/TableFontFamily__c.field-meta.xml
<CustomField>
    <fullName>TableFontFamily__c</fullName>
    <label>TableFontFamily</label>
    <length>25</length>
    <type>Text</type>
</CustomField>