default/objects/FormatDetails__mdt/fields/TableFontSize__c.field-meta.xml
<CustomField>
    <fullName>TableFontSize__c</fullName>
    <label>TableFontSize</label>
    <length>25</length>
    <type>Text</type>
</CustomField>