default/objects/FormatDetails__mdt/fields/TableTextColor__c.field-meta.xml
<CustomField>
    <fullName>TableTextColor__c</fullName>
    <label>TableTextColor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>