default/objects/FormatDetails__mdt/fields/TierNameColumHeading__c.field-meta.xml
<CustomField>
    <fullName>TierNameColumHeading__c</fullName>
    <label>TierNameColumHeading</label>
    <length>25</length>
    <type>Text</type>
</CustomField>