default/objects/FormatDetails__mdt/fields/TierPriceColumnHeading__c.field-meta.xml
<CustomField>
    <fullName>TierPriceColumnHeading__c</fullName>
    <label>TierPriceColumnHeading</label>
    <length>25</length>
    <type>Text</type>
</CustomField>